force-app/main/default/objects/SocialPost/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <description>Social: Field to indicate what type of approval a post is submitted for</description>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Offensive Words</fullName>
            </value>
            <value>
                <fullName>Verified User/High Follower Count</fullName>
            </value>
            <value>
                <fullName>Manual Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>