force-app/main/default/objects/SocialPost/fields/Customer_Follow_Up_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Customer_Follow_Up_Timestamp__c</fullName>
    <description>Social Care: Timestamp of when a customer posts</description>
    <label>Customer Follow Up Timestamp</label>
    <type>DateTime</type>
</CustomField>