force-app/main/default/objects/SocialPost/validationRules/Social_Misspelled_Words.validationRule-meta.xml
<ValidationRule>
    <fullName>Social_Misspelled_Words</fullName>
    <active>true</active>
    <description>Social Care: restriction from posting misspelled words</description>
    <errorConditionFormula>AND(IsOutbound =TRUE,
OR(
CONTAINS(Content,&quot;accomodate&quot;),
CONTAINS(Content,&quot;accomodation&quot;),
CONTAINS(Content,&quot;acheive&quot;),
CONTAINS(Content,&quot;accross&quot;),
CONTAINS(Content,&quot;agressive&quot;), 
CONTAINS(Content,&quot;agression&quot;),
CONTAINS(Content,&quot;apparantly&quot;),
CONTAINS(Content,&quot;appearence&quot;),
CONTAINS(Content,&quot;arguement&quot;),
CONTAINS(Content,&quot;assasination&quot;),
CONTAINS(Content,&quot;basicly&quot;),
CONTAINS(Content,&quot;begining&quot;),
CONTAINS(Content,&quot;beleive&quot;), 
CONTAINS(Content,&quot;belive&quot;),
CONTAINS(Content,&quot;bizzare&quot;),
CONTAINS(Content,&quot;buisness&quot;),
CONTAINS(Content,&quot;calender&quot;),
CONTAINS(Content,&quot;Carribean&quot;),
CONTAINS(Content,&quot;cemetary&quot;),
CONTAINS(Content,&quot;chauffer&quot;),
CONTAINS(Content,&quot;collegue&quot;),
CONTAINS(Content,&quot;comming&quot;),
CONTAINS(Content,&quot;commitee&quot;),
CONTAINS(Content,&quot;completly&quot;),
CONTAINS(Content,&quot;concious&quot;),
CONTAINS(Content,&quot;curiousity&quot;),
CONTAINS(Content,&quot;definately&quot;),
CONTAINS(Content,&quot;dilemna&quot;),
CONTAINS(Content,&quot;dissapear&quot;),
CONTAINS(Content,&quot;dissapoint&quot;),
CONTAINS(Content,&quot;ecstacy&quot;),
CONTAINS(Content,&quot;embarass&quot;),
CONTAINS(Content,&quot;enviroment&quot;),
CONTAINS(Content,&quot;existance&quot;),
CONTAINS(Content,&quot;Farenheit&quot;),
CONTAINS(Content,&quot;familar&quot;),
CONTAINS(Content,&quot;finaly&quot;),
CONTAINS(Content,&quot;florescent&quot;),
CONTAINS(Content,&quot;foriegn&quot;),
CONTAINS(Content,&quot;forseeable&quot;),
CONTAINS(Content,&quot;fourty&quot;),
CONTAINS(Content,&quot;foward&quot;),
CONTAINS(Content,&quot;freind&quot;),
CONTAINS(Content,&quot;futher&quot;),
CONTAINS(Content,&quot;jist&quot;),
CONTAINS(Content,&quot;glamourous&quot;),
CONTAINS(Content,&quot;goverment&quot;),
CONTAINS(Content,&quot;gaurd&quot;),
CONTAINS(Content,&quot;happend&quot;),
CONTAINS(Content,&quot;harrass&quot;),
CONTAINS(Content,&quot;harrassment&quot;),
CONTAINS(Content,&quot;honourary&quot;),
CONTAINS(Content,&quot;humourous&quot;),
CONTAINS(Content,&quot;idiosyncracy&quot;),
CONTAINS(Content,&quot;immediatly&quot;),
CONTAINS(Content,&quot;incidently&quot;),
CONTAINS(Content,&quot;independant&quot;),
CONTAINS(Content,&quot;interupt&quot;)))</errorConditionFormula>
    <errorMessage>It appears as if you have misspelled a word.  Please review, adjust and resend your post.</errorMessage>
</ValidationRule>