force-app/main/default/objects/SocialPost/validationRules/Social_Misspelled_words_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Social_Misspelled_words_2</fullName>
    <active>true</active>
    <description>Social Care: restriction from posting misspelled words</description>
    <errorConditionFormula>AND(IsOutbound=TRUE,
OR(
CONTAINS(Content,&quot;irresistable&quot;),
CONTAINS(Content,&quot;knowlege&quot;),
CONTAINS(Content,&quot;liase&quot;),
CONTAINS(Content,&quot;liason&quot;),
CONTAINS(Content,&quot;lollypop&quot;),
CONTAINS(Content,&quot;millenium&quot;),
CONTAINS(Content,&quot;millenia&quot;),
CONTAINS(Content,&quot;Neandertal&quot;),
CONTAINS(Content,&quot;neccessary&quot;),
CONTAINS(Content,&quot;noticable&quot;),
CONTAINS(Content,&quot;ocassion&quot;),
CONTAINS(Content,&quot;occassion&quot;),
CONTAINS(Content,&quot;occured&quot;),
CONTAINS(Content,&quot;occuring&quot;),
CONTAINS(Content,&quot;occurance&quot;),
CONTAINS(Content,&quot;occurence&quot;),
CONTAINS(Content,&quot;pavillion&quot;),
CONTAINS(Content,&quot;persistant&quot;),
CONTAINS(Content,&quot;pharoah&quot;),
CONTAINS(Content,&quot;peice&quot;),
CONTAINS(Content,&quot;politican&quot;),
CONTAINS(Content,&quot;Portugese&quot;),
CONTAINS(Content,&quot;posession&quot;),
CONTAINS(Content,&quot;prefered&quot;),
CONTAINS(Content,&quot;prefering&quot;),
CONTAINS(Content,&quot;propoganda&quot;),
CONTAINS(Content,&quot;publically&quot;),
CONTAINS(Content,&quot;realy&quot;),
CONTAINS(Content,&quot;recieve&quot;),
CONTAINS(Content,&quot;refered&quot;),
CONTAINS(Content,&quot;refering&quot;),
CONTAINS(Content,&quot;religous&quot;),
CONTAINS(Content,&quot;rember&quot;),
CONTAINS(Content,&quot;remeber&quot;),
CONTAINS(Content,&quot;resistence&quot;),
CONTAINS(Content,&quot;sence&quot;),
CONTAINS(Content,&quot;seperate&quot;),
CONTAINS(Content,&quot;seige&quot;),
CONTAINS(Content,&quot;succesful&quot;),
CONTAINS(Content,&quot;supercede&quot;),
CONTAINS(Content,&quot;suprise&quot;),
CONTAINS(Content,&quot;tatoo&quot;),
CONTAINS(Content,&quot;tendancy&quot;),
CONTAINS(Content,&quot;therefor&quot;),
CONTAINS(Content,&quot;threshhold&quot;),
CONTAINS(Content,&quot;tommorow&quot;),
CONTAINS(Content,&quot;tommorrow&quot;),
CONTAINS(Content,&quot;tounge&quot;),
CONTAINS(Content,&quot;truely&quot;),
CONTAINS(Content,&quot;unforseen&quot;),
CONTAINS(Content,&quot;unfortunatly&quot;),
CONTAINS(Content,&quot;untill&quot;),
CONTAINS(Content,&quot;wierd&quot;),
CONTAINS(Content,&quot;whereever&quot;)))</errorConditionFormula>
    <errorMessage>It appears as if you have misspelled a word.  Please review, adjust and resend your post</errorMessage>
</ValidationRule>